# tbot

./: .gitignore  ARCHITECTURE.md  CLI_EXAMPLES.md  QUICKSTART.md  README.md  project_stats.sh  pyproject.toml  server_manager.py
conductor/: README.md  SETTINGS.md  SETTINGS_16gb.md  SETTINGS_8gb.md  SETTINGS_mistral.md  base_llm_engine.py  classificator.py  conductor.py  conductor_cli.py  conductor_simplified.py  dependencies_loader.py  http_server.py  mcp_server.py  model_loader.py
conductor/engines/: __init__.py  base_engine.py  code_completion.py  code_generation.py  code_review.py  conversational_chat.py  creative_writing.py  general_reasoning.py  image_generation.py  instruction_following.py  legal_analysis.py  long_context.py  mathematical_reasoning.py  question_answering.py  scientific_research.py  summarization.py  summarization_migrated.py  translation.py
conductor/examples/: usage_examples.py
conductor/model_info/: 01-ai--Yi-1.5-6B-Chat.py  HuggingFaceH4--zephyr-7b-beta.py  NousResearch--Nous-Hermes-2-Mistral-7B-DPO.py  NousResearch--Nous-Hermes-2-Mistral-7B-SFT.py  NousResearch--Nous-Hermes-llama-2-13b.py  NousResearch--Nous-Hermes-llama-2-70b.py  NousResearch--Nous-Hermes-llama-2-7b.py  Qwen--Qwen1.5-1.8B-Chat.py  bigscience--bloomz-3b.py  bigscience--bloomz-7b1-mt.py  codellama--CodeLlama-7b-Instruct-hf.py  facebook--nllb-200-distilled-1.3B.py  facebook--nllb-200-distilled-600M.py  google--flan-t5-large.py  google--flan-t5-xl.py  google--gemma-2b-it.py  meta-llama--Meta-Llama-3-70B-Instruct.py  meta-llama--Meta-Llama-3-70B.py  meta-llama--Meta-Llama-3-8B-Instruct.py  meta-llama--Meta-Llama-3-8B.py  microsoft--phi-2.py  mistralai--Mistral-7B-Instruct-v0.1.py  mistralai--Mistral-7B-Instruct-v0.3.py  mistralai__Mistral-7B-Instruct-v0.1.py  openchat--openchat-3.5-1210.py  openlm-research--open_llama_7b_v2.py  tiiuae--falcon-40b-instruct.py  tiiuae--falcon-7b-instruct.py
conductor/tests/: README.md  debug_classification.py  test_classification.py  test_classification_logic.py  test_conductor_integration.py  test_dynamic_switching.py  test_image_classification.py  test_simple_classification.py  test_sorting.py  test_type_annotations.py
conductor/utils/: config_parser.py  model_registry.py  persona_loader.py  test_hf_model_gated.py
diffusiond/: SETTINGS.md  comfyui_adapter.py  comfyui_http_handler.py  dependencies.py  http_server.py  image_generator.py  main.py  mcp_server.py  model examples.txt  model_info_dreamshaper8.py  model_loader.py  server.py
diffusiond/model_info/: Lykon--dreamshaper-8.py
tbot/: http_client.py  main.py
tbot/tests/: test_simple_client.py  test_tbot_client.py
tests_diffusiond/: README.md  run_tests.sh  test_comfyui_api.py  test_config.py  test_http_api.py  test_integration.py
